Add leagues api call and ui representation